- Label no longer forced to be borderless.  - TextBox and Button no longer forced to have borders.  - Cursor shown by default in TextBox.  - TextBox border bevelled both out and in.  - Cursor follows end of text when text set/appended/inserted.  - WoopsiString has a constructor with no parameters.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -50,6 +50,7 @@ Change Log
        a read-only, borderless text display gadget.
      - Text inherits from WoopsiString class.
      - Added MultiLineTextBox::removeText() methods.
+     - TextBox border bevelled both out and in.
 
 
   V0.34 (20080702)
