- Deleted empty fontbase.cpp file.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -14,6 +14,7 @@ Change Log
      - MultiLineTextBox vertical alignment options all work correctly.
      - MultiLineTextBox scrolls correctly when text is added.
      - Text::stripTopLines() was not removing all characters.
+     - Deleted empty fontbase.cpp file.
 	 
   - New Features:
      - Moved all classes into WoopsiUI namespace.
