- Added calendar example.  - Corrected rounding error in calendar button vertical alignment.  - Bumped version number to 0.36.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -24,6 +24,7 @@ Change Log
      - Moved all classes into WoopsiUI namespace.
      - Added Date class.
      - Added Calendar gadget.
+     - Added Calendar example.
 
 
   V0.35 (20081012)
