- Added Date example.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -25,6 +25,7 @@ Change Log
      - Added Date class.
      - Added Calendar gadget.
      - Added Calendar example.
+     - Added Date example.
 
 
   V0.35 (20081012)
