- ListBox redraws correctly when an option is selected in single selection mode.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -6,6 +6,8 @@ Change Log
   - Fixes:
      - Removed PALib dependency from filerequester example.
      - FileRequester gadget fixed for devKitARM r24 (thanks Quirky).
+     - ListBox redraws correctly when an option is selected in single selection
+       mode.
 
   V0.37 (20090112)
   
