- SDL path fixes (Quirky).

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -15,6 +15,7 @@ Change Log
      - Fixed FileRequester crash when path has trailing slash (Quirky).
      - Fixed double-click in SDL (Quirky).
      - FileRequester fixed for SDL (Quirky).
+     - SDL path fixes (Quirky).
 
   V0.37 (20090112)
   
