--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -16,6 +16,7 @@ Change Log
      - Fixed double-click in SDL (Quirky).
      - FileRequester fixed for SDL (Quirky).
      - SDL path fixes (Quirky).
+	 - Escape key to quit in SDL mode (Quirky).
 
   V0.37 (20090112)
   
