- Removed WoopsiArray::begin().  - Removed LinkedList::begin().

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -26,6 +26,8 @@ Change Log
      - Fixed const-correctness of various Text class methods.
      - SDL framebuffers initialised to black.
      - More doxygen fixes.
+     - Removed WoopsiArray::begin().
+     - Removed LinkedList::begin().
 
   - New Features:
      - Added Gadget::getChild() and Gadget::getChildCount() (for leonelhs).
