--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -67,6 +67,7 @@ Change Log
          ContextMenuEventArgs::getItem().
      - Slider grip automatically resizes; no need to call resizeGrip().
      - End point rects now cached (sans child rects) for extra speed.
+     - Gadget rect caching moved into separate RectCache class.
 
   V0.37 (20090112)
   
