- Added GraphicsPort::scroll() to scroll regions of gadgets.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -72,6 +72,7 @@ Change Log
      - Gadget::clipRectToHierarchy made non-recursive.
      - Added GraphicsPort::copy() to copy regions of the framebuffer around.
      - Screen dragging code improved; uses new GraphicsPort::copy() method.
+     - Added GraphicsPort::scroll() to scroll regions of gadgets.
 
   V0.37 (20090112)
   
