--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -5,20 +5,24 @@ Change Log
   
   - Fixes:
     - Removed framebuffer-hitting code from DimmedScreen gadget and replaced
-	  with call to GraphicsPort::dim().
+      with call to GraphicsPort::dim().
     - ListBox removes itself from its ListData object when deleted.
     - Keyboard example shows cursor.
     - Moved DimmedScreen into woopsi folder as an official gadget.
     - CycleButton::getPreferredDimensions() populates rect with correct values.
     - Const fixed Gadget::getRefcon().
-	- Gadget::disable() and Gadget::enable() redraw the gadget by default.
-	- Fixed clipRectToHierarchy() bug introduced in switch to non-recursive
-	  function in last release.
+    - Gadget::disable() and Gadget::enable() redraw the gadget by default.
+    - Fixed clipRectToHierarchy() bug introduced in switch to non-recursive
+      function in last release.
+    - RadioButtonGroup redraws when resized.
+    - RadioButtonGroup returns correct dimensions from getPreferredDimensions().
   
   - New Features:
     - TextBox and MultiLineTextBox cursor moves when d-pad left/right are
       pressed and gadget has focus.
-    - Added tests folder and CycleButton test.
+    - Added tests folder:
+      - CycleButton test;
+      - RadioButtonGroup test.
   
 
   V0.38 (20090428)
