--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -18,6 +18,7 @@ Change Log
     - RadioButtonGroup returns correct dimensions from getPreferredDimensions().
     - Updated copyright notice in defines.h.
     - Bitmap::getPixel() works correctly for large bitmaps.
+    - Bitmap::drawBitmap() flushes mem correctly for DMA copy.
   
   - New Features:
     - TextBox and MultiLineTextBox cursor moves when d-pad left/right are
